2006-03-31  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Added check to make sure pid file contects are an int.

	* src/tlib/oscar.py:
	Updated ICQ5 capabilities strings.

	* src/legacy/icqt.py:
	Removed ICQ5 capability identification.

	* src/tlib/icqt.py:
	* src/tlib/glue.py:
	Fixed problem with not checking encoding of nickname in all locations.

	* src/legacy/legacylist.py:
	Fixed bug where I wasn't caring about nicknames always.

	* config_example.xml:
	* src/config.py:
	* src/legacy/icqt.py:
	Switched disableWebPresence to enableWebPresence. (changed default)

	* tools/managessi.py:
	Added display of nicknames.

	* src/legacy/icqt.py:
	Moved buddy nickname update to central location.

	* src/jabw.py:
	* src/session.py:
	* src/avatar.py:
	Added support for sending of IQ-based avatars.

2006-03-23  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	Fixed misplaced savetheseusers.

2006-03-20  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Added better handling of reactors.

2006-03-18  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Added passing of encoding to BOSConnection.
	Check encoding of nicknames.
	Added better checking for updateNickname.

	* src/tlib/oscar.py:
	Added in encoding guess support for offline messages.

2006-03-14  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	* src/tlib/oscar.py:
	Fixed handling of icq statuses and flags.

	* src/legacy/icqt.py:
	Fixed encoding issues with nicknames (thanks Norbert!)

	* src/main.py:
	Fixed bug with call to handleResourcePresence (thanks Motienko!)

	* src/legacy/glue.py:
	Fixed possible crash with inactive session.

	* src/legacy/icqt.py:
	Fixed bug in how gotNickname was called.

2006-03-12  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Removed raise (that was there for testing)

	* src/contact.py:
	* src/globals.py:
	* src/jabw.py:
	* src/main.py:
	* src/misciq.py:
	* src/register.py:
	* src/session.py: